# MoreIcons

./: .editorconfig  .gitignore  CMakeLists.txt  CNAME  README.md  about.md  changelog.md  fix-docs.js  flash.toml  mod.json
.github/workflows/: build.yml  deploy.yml  release.yml
docs/: index.md
docs/more-icons-api/: change-icon.md  current-icon.md  get-icon.md  icon-info.md  icon-name.md  index.md  list-icons.md  load-icon.md  player-object.md  robot-sprite.md  simple-player.md  unload-icon.md
include/: IconInfo.hpp  MoreIcons.hpp  MoreIconsV2.hpp  TrailInfo.hpp
src/: MoreIcons.cpp  MoreIcons.hpp  MoreIcons.mm  MoreIconsAPI.cpp
src/api/: IconInfo.cpp  IconInfoImpl.hpp  MoreIconsAPI.cpp  MoreIconsAPI.hpp
src/classes/: BiggerScrollLayer.cpp  BiggerScrollLayer.hpp  ButtonHooker.cpp  ButtonHooker.hpp  DummyNode.cpp  DummyNode.hpp  EditIconPopup.cpp  IconViewPopup.cpp  IconViewPopup.hpp  LogCell.cpp  LogCell.hpp  LogLayer.cpp  LogLayer.hpp  MoreIconsPopup.cpp  MoreIconsPopup.hpp  MoreInfoPopup.cpp  MoreInfoPopup.hpp  SpecialSettingsPopup.cpp  SpecialSettingsPopup.hpp
src/classes/misc/: ButtonHooker.cpp  ButtonHooker.hpp  LazyIcon.cpp  LazyIcon.hpp  MultiControl.cpp  MultiControl.hpp  SimpleIcon.cpp  SimpleIcon.hpp  StringMap.hpp  ThreadPool.cpp  ThreadPool.hpp
src/classes/popup/: BasePopup.cpp  BasePopup.hpp  EditIconPopup.cpp  EditIconPopup.hpp  IconViewPopup.cpp  IconViewPopup.hpp  MoreIconsPopup.cpp  MoreIconsPopup.hpp
src/classes/popup/edit/: EditDeathEffectPopup.cpp  EditDeathEffectPopup.hpp  EditIconPopup.cpp  EditIconPopup.hpp  EditShipFirePopup.cpp  EditShipFirePopup.hpp  EditTrailPopup.cpp  EditTrailPopup.hpp  FrameDefinition.cpp  FrameDefinition.hpp  FramePresetPopup.cpp  FramePresetPopup.hpp  IconButton.cpp  IconButton.hpp  IconColorPopup.cpp  IconColorPopup.hpp  IconEditorState.cpp  IconEditorState.hpp  IconNamePopup.cpp  IconPresetPopup.cpp  IconPresetPopup.hpp  ImageRenderer.cpp  ImageRenderer.hpp  LoadEditorPopup.cpp  LoadEditorPopup.hpp  SaveDeathEffectPopup.cpp  SaveDeathEffectPopup.hpp  SaveEditorPopup.cpp  SaveEditorPopup.hpp  SaveIconPopup.cpp  SaveIconPopup.hpp
src/classes/popup/edit/death/: EditDeathEffectPopup.cpp  EditDeathEffectPopup.hpp  SaveDeathEffectPopup.cpp  SaveDeathEffectPopup.hpp  SaveEffectEditorPopup.cpp  SaveEffectEditorPopup.hpp
src/classes/popup/edit/fire/: EditShipFirePopup.cpp  EditShipFirePopup.hpp
src/classes/popup/edit/icon/: EditIconPopup.cpp  EditIconPopup.hpp  IconColorPopup.cpp  IconColorPopup.hpp  IconEditorState.cpp  IconEditorState.hpp  LoadEditorPopup.cpp  LoadEditorPopup.hpp  SaveEditorPopup.cpp  SaveEditorPopup.hpp  (+2 more)
src/classes/popup/info/: IconNamePopup.cpp  IconNamePopup.hpp  MoreInfoPopup.cpp  MoreInfoPopup.hpp  SpecialControlData.cpp  SpecialControlData.hpp  SpecialSettingsPopup.cpp  SpecialSettingsPopup.hpp
src/classes/popup/log/: LogCell.cpp  LogCell.hpp  LogLayer.cpp  LogLayer.hpp
src/classes/popup/view/: IconViewPopup.cpp  IconViewPopup.hpp  LazyIcon.cpp  LazyIcon.hpp  ViewDeathEffectPopup.cpp  ViewDeathEffectPopup.hpp  ViewIconPopup.cpp  ViewIconPopup.hpp  ViewShipFirePopup.cpp  ViewShipFirePopup.hpp
src/classes/scroll/: BiggerContentLayer.cpp  BiggerContentLayer.hpp  BiggerScrollLayer.cpp  BiggerScrollLayer.hpp
src/hooks/: AppDelegate.cpp  CCDirector.cpp  CCFileUtils.cpp  CharacterColorPage.cpp  GJBaseGameLayer.cpp  GJGarageLayer.cpp  GJRobotSprite.cpp  GameManager.cpp  LoadingLayer.cpp  MenuGameLayer.cpp  MenuLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  ProfilePage.cpp  SimplePlayer.cpp
src/utils/: Constants.cpp  Constants.hpp  Defaults.cpp  Defaults.hpp  Filesystem.cpp  Filesystem.hpp  Get.cpp  Get.hpp  Icons.cpp  Icons.hpp  Json.hpp  Load.cpp  Load.hpp  Load.mm  Log.cpp  Log.hpp  Notify.cpp  Notify.hpp
(+2 files in other folders)
